# undicht_0.40

./: .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  README.md  vscode_clang_settings.txt
core/: CMakeLists.txt
core/src/: buffer_layout.cpp  buffer_layout.h  config.h  debug.h  types.cpp  types.h
examples/hello_world/: CMakeLists.txt
examples/hello_world/res/: shader.frag  shader.vert  vert.spv
examples/hello_world/src/: main.cpp
examples/sponza/: .gitignore  CMakeLists.txt
examples/sponza/res/shader/: frag.spv  shader.frag  shader.vert  vert.spv
examples/sponza/src/: main.cpp
examples/user_interface/: CMakeLists.txt
examples/user_interface/src/: main.cpp
graphics/: CMakeLists.txt
graphics/src/: graphics_types.cpp  graphics_types.h  undicht_graphics.h
graphics/src/core/vulkan/: graphics_api.cpp  graphics_api.h  graphics_device.cpp  graphics_device.h  graphics_surface.cpp  graphics_surface.h  swap_chain.cpp  swap_chain.h  vulkan_declaration.h  vulkan_implementation.cpp  vulkan_pch.hpp
graphics/src/graphics_pipeline/vulkan/: draw_call.cpp  draw_call.h  framebuffer.cpp  framebuffer.h  pipeline.cpp  pipeline.h  render_pass.cpp  render_pass.h  render_subpass.cpp  render_subpass.h  renderer.cpp  renderer.h  shader.cpp  shader.h  texture.cpp  texture.h  uniform_buffer.cpp  uniform_buffer.h  vertex_buffer.cpp  vertex_buffer.h  vram_buffer.cpp  vram_buffer.h
graphics/src/user_interface/: font.cpp  font.h  font_renderer.cpp  font_renderer.h
graphics/src/user_interface/shader/font/: compile.sh  frag.spv  shader.frag  shader.vert  vert.spv
graphics/src/window/glfw/: monitor.h  window.cpp  window.h
tools/: CMakeLists.txt
tools/src/: file_tools.cpp  file_tools.h
tools/src/fonts/: true_type.cpp  true_type.h
tools/src/images/: image_file.cpp  image_file.h
